--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ol": "^10.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
