fix: remove deprecated next export command, update build scripts

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "build:gh-pages": "next build --turbopack",
-    "export": "next export",
-    "build:export": "npm run build:gh-pages && npm run export",
+    "build:export": "npm run build:gh-pages",
     "start": "next start",
     "lint": "eslint",
     "type-check": "tsc --noEmit",
