--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,10 @@ jobs:
     - name: Type check
       run: npm run type-check
 
-    - name: Build for production
+    - name: Build and export for production
       run: npm run build:gh-pages
       env:
         NODE_ENV: production
-
-    - name: Export static files
-      run: npm run export
 
     - name: Deploy to GitHub Pages
       if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
